# themplate

./: .travis.yml  README.md  Setup.hs  themplate.cabal
src/: Main.hs  Pattern.hs
tests/: doctests.hsc
travis/: script.sh
