name:          themplate
version:       0.1
license:       BSD3
cabal-version: >= 1.10
license-file:  LICENSE
author:        Benno Fünfstück
maintainer:    Benno Fünfstück <benno.fuenfstueck@gmail.com>
stability:     experimental
homepage:      http://github.com/bennofs/themplate/
bug-reports:   http://github.com/bennofs/themplate/issues
copyright:     Copyright (C) 2013 Benno Fünfstück
synopsis:      themplate
description:   themplate
build-type:    Custom

extra-source-files:
  .ghci
  .gitignore
  .travis.yml
  .vim.custom
  README.md

source-repository head
  type: git
  location: https://github.com/bennofs/themplate.git

executable themplate
  hs-source-dirs: src
  main-is: Main.hs
  default-language: Haskell2010
  ghc-options: -Wall
  build-depends:
      base >= 4.4 && < 5
    , filepath
    , directory
    , text
    , transformers
    , either
    , optparse-applicative
    , configurator
    , errors

test-suite doctests
  type:    exitcode-stdio-1.0
  main-is: doctests.hs
  default-language: Haskell2010
  build-depends:
      base
    , directory >= 1.0
    , doctest >= 0.9.1
    , filepath
  ghc-options: -Wall -threaded
  if impl(ghc<7.6.1)
    ghc-options: -Werror
  hs-source-dirs: tests
